@@ -1,3 +1,9 @@
+2001-02-23  Derek Price  <derek.price@openavenue.com>
+
+	* main.c (main): Only check
+	* server.c: Include GSSAPI headers with client support as well as
+	server support.
+
 2001-02-21  Larry Jones  <larry.jones@sdrc.com>
 
 	* modules.c, cvs.h (do_module): Add build_dirs argument and use it
